# Arduino-remoto

./: .dockerignore  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
src/: App.jsx  TestSimulator.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: connection.js  http.js
src/components/: ConnectionControls.jsx  SensorHistory.jsx  SensorWidget.jsx  TemperatureHistory.jsx  TemperatureWidget.jsx
src/hooks/: useDistance.js  useHumidity.js  useTemperature.js
src/pages/: _app,js
src/styles/: ConnectionControls.module.css  SensorHistory.module.css  SensorWidget.module.css  TemperatureHistory.module.css  TemperatureWidget.module.css  global.css
